# cpp2026

./: .gitignore  CMakeLists.txt  CMakePresets.json
Cola/: CMakeLists.txt
Cola/src/: main.cpp
Enumerados/: CMakeLists.txt
Enumerados/src/: main.cpp
Estructuras/: CMakeLists.txt
Estructuras/src/: main.cpp
Funciones/: CMakeLists.txt
Funciones/src/: main.cpp
HolaMundo/: CMakeLists.txt
HolaMundo/src/: main.cpp
Lista/: CMakeLists.txt
Lista/src/: main.cpp
ListaBidireccional/: CMakeLists.txt
ListaBidireccional/src/: main.cpp
ListaCircular/: CMakeLists.txt
ListaCircular/src/: main.cpp
ListaCircularBidireccional/: CMakeLists.txt
ListaCircularBidireccional/src/: main.cpp
Namespace/: CMakeLists.txt
Namespace/include/: aritmetica.hpp
Namespace/src/: main.cpp
Objetos/: CMakeLists.txt
Objetos/include/: empleado.hpp  persona.hpp
Objetos/src/: empleado.cpp  main.cpp  persona.cpp
Pila/: CMakeLists.txt
Pila/src/: main.cpp
Plantillas/: CMakeLists.txt
Plantillas/src/: main.cpp
Punteros/: CMakeLists.txt
Punteros/src/: main.cpp
Variables/: CMakeLists.txt
Variables/src/: main.cpp
