cmake_minimum_required(VERSION 3.16)
project(CPP2026 VERSION 1.0 LANGUAGES CXX)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_subdirectory(HolaMundo)
add_subdirectory(Variables)
add_subdirectory(Funciones)
add_subdirectory(Estructuras)
add_subdirectory(Pila)
add_subdirectory(Cola)
add_subdirectory(Lista)
add_subdirectory(ListaCircular)
add_subdirectory(ListaBidireccional)
add_subdirectory(ListaCircularBidireccional)
add_subdirectory(Objetos)
add_subdirectory(Plantillas)
add_subdirectory(Punteros)
add_subdirectory(Namespace)
add_subdirectory(Enumerados)